@@ -1,7 +1,10 @@
+13-August-2013:
+===============
++ Table.add() now returns row index of the added row. 
+
 04-August-2013:
 ===============
 + Experimental Table.findSortedLong() replaced by Table.lowerBoundLong() and Table.upperBoundLong() because these provide more flexibility, and it follows similar changes in the core library. (Kristian Spangsege)
-
 
 05-July-2013:
 ============
